# rag-evidence-inject

./: .gitignore  LICENSE  README.md  load_config.py  pyproject.toml
benchmark/: __init__.py  corpus_builder.py  datasets.py  templates.py
configs/: main_experiment.yaml  pilot.yaml
defense/: __init__.py  trim.py
evaluation/: __init__.py  metrics.py  run_logger.py
generation/: __init__.py  prompts.py  runner.py
logs/: pilot_clean_summary.json  pilot_summary.json
paper/: main.tex  references.bib
paper/.ipynb_checkpoints/: main-checkpoint.aux  main-checkpoint.out  references-checkpoint.bib
paper/tables/: ablation_metrics.tex  pilot_by_family.tex  pilot_by_rank.tex  pilot_by_template.tex  pilot_clean_metrics.tex  pilot_metrics.tex
paper/tables/.ipynb_checkpoints/: pilot_metrics-checkpoint.tex
retrieval/: __init__.py  bm25_retriever.py  context_builder.py  dense_retriever.py  hybrid_retriever.py
scripts/: __init__.py  export_tables.py  run_ablation.py  run_clean_sanity.py  run_pilot.py
scripts/.ipynb_checkpoints/: export_tables-checkpoint.py
